--- a/templates/homepage/benefit.html
+++ b/templates/homepage/benefit.html
@@ -1,4 +1,11 @@
 {% load static %}
+
+{% comment %}
+This displays what the company offers
+has some variables to adjust styling
+is displayed in index.html
+{% endcomment %}
+
 <div class="col-md-6 col-lg-4">
     <a href="#">
         <div class="service-item {{ color_item }} rounded border border-secondary">
