--- a/templates/homepage/testimonial-item.html
+++ b/templates/homepage/testimonial-item.html
@@ -1,4 +1,5 @@
 {% load static %}
+{# რეევიუები #}
 <div class="testimonial-item img-border-radius bg-light rounded p-4">
     <div class="position-relative">
         <i class="fa fa-quote-right fa-2x text-secondary position-absolute"
