--- a/templates/homepage/veg.html
+++ b/templates/homepage/veg.html
@@ -1,4 +1,5 @@
 {% load static %}
+{# ეს ბოსტნეულის მაღაზიისთვის #}
 <div class="border border-primary rounded position-relative vesitable-item">
     <div class="vesitable-img">
         <img src="{% static product_image %}" class="img-fluid w-100 rounded-top" alt="">
