--- a/templates/homepage/vegetable-shop.html
+++ b/templates/homepage/vegetable-shop.html
@@ -1,4 +1,5 @@
 {% load static %}
+{# ბოსტნეულის მაღაზია #}
 <div class="container-fluid vesitable py-5">
     <div class="container py-5">
         <h1 class="mb-0">Fresh Organic Vegetables</h1>
