--- a/templates/cart/base_cart.html
+++ b/templates/cart/base_cart.html
@@ -1,5 +1,15 @@
 {% extends 'base.html' %}
 
+{% comment %}
+extends from base.html changes the title and navbar's active page.
+has block content for header hero and features. After that goes the
+cartcontent which is in the cart.html.
+{% endcomment %}
+
+{% block title %}
+    Cart
+{% endblock %}
+
 {% block content %}
     {% block header %}
         <!-- Single Page Header start -->
