--- a/templates/checkout/total.html
+++ b/templates/checkout/total.html
@@ -1,13 +1,16 @@
-<td class="py-5"></td>
-<td class="py-5"></td>
-<td class="py-5">
-    <p class="mb-0 text-dark py-3">Subtotal</p>
-</td>
-<td class="py-5">
-    <div class="py-3 border-bottom border-top">
-        <p class="mb-0 text-dark">${{ subtotal }}</p>
-    </div>
-</td>
+<tr>
+    <th scope="row">
+    </th>
+    <td class="py-5"></td>
+    <td class="py-5">
+        <p class="mb-0 text-dark py-3">Subtotal</p>
+    </td>
+    <td class="py-5">
+        <div class="py-3 border-bottom border-top">
+            <p class="mb-0 text-dark">${{ subtotal }}</p>
+        </div>
+    </td>
+</tr>
 <tr>
     {% include 'checkout/shipping.html' with cart=cart %}
 </tr>
