--- a/templates/homepage/banner.html
+++ b/templates/homepage/banner.html
@@ -1,4 +1,9 @@
 {% load static %}
+
+{% comment %}
+This is the homepage banner
+{% endcomment %}
+
 <div class="container-fluid banner bg-secondary my-5">
     <div class="container py-5">
         <div class="row g-4 align-items-center">
