--- a/templates/product_detail/base_detail.html
+++ b/templates/product_detail/base_detail.html
@@ -1,19 +1,30 @@
 {% extends 'base.html' %}
+
+{% comment %}
+extends from base.html changes the title and navbar's active page.
+has block content for header hero and features. After that goes the
+detailcontent which is in the shop-detail.html.
+{% endcomment %}
+
+{% block title %}
+    Product Detail
+{% endblock %}
+
 {% block nav %}
     {% include 'reusable_components/nav.html' with detail="active" %}
 {% endblock nav %}
 {% block content %}
     {% block header %}
-    <!-- Single Page Header start -->
-    <div class="container-fluid page-header py-5">
-        <h1 class="text-center text-white display-6">Shop Detail</h1>
-        <ol class="breadcrumb justify-content-center mb-0">
-            <li class="breadcrumb-item"><a href="#">Home</a></li>
-            <li class="breadcrumb-item"><a href="#">Pages</a></li>
-            <li class="breadcrumb-item active text-white">Shop Detail</li>
-        </ol>
-    </div>
-    <!-- Single Page Header End -->
+        <!-- Single Page Header start -->
+        <div class="container-fluid page-header py-5">
+            <h1 class="text-center text-white display-6">Shop Detail</h1>
+            <ol class="breadcrumb justify-content-center mb-0">
+                <li class="breadcrumb-item"><a href="#">Home</a></li>
+                <li class="breadcrumb-item"><a href="#">Pages</a></li>
+                <li class="breadcrumb-item active text-white">Shop Detail</li>
+            </ol>
+        </div>
+        <!-- Single Page Header End -->
 
     {% endblock header %}
     {% block detailcontent %}
