--- a/templates/reusable_components/nav.html
+++ b/templates/reusable_components/nav.html
@@ -1,4 +1,4 @@
-{% block content %}
+{% block nav %}
 <div class="container-fluid fixed-top">
     <div class="container topbar bg-primary d-none d-lg-block">
         <div class="d-flex justify-content-between">
@@ -53,4 +53,4 @@
         </nav>
     </div>
 </div>
-{% endblock content %}
+{% endblock nav %}
