--- a/templates/shop/product.html
+++ b/templates/shop/product.html
@@ -2,17 +2,17 @@
 <div class="col-md-6 col-lg-6 col-xl-4">
     <div class="rounded position-relative fruite-item">
         <div class="fruite-img">
-            <img src={% static image %} class="img-fluid w-100 rounded-top"
+            <img src={% static product.image_url %} class="img-fluid w-100 rounded-top"
                  alt="">
         </div>
         <div class="text-white bg-secondary px-3 py-1 rounded position-absolute"
-             style="top: 10px; left: 10px;">{{ category }}
+             style="top: 10px; left: 10px;">{{ product.product_category.first.category_name }}
         </div>
         <div class="p-4 border border-secondary border-top-0 rounded-bottom">
-            <h4>{{ name }}</h4>
-            <p>{{ desc }}</p>
+            <h4>{{ product.product_name }}</h4>
+            <p>{{ product_description }}</p>
             <div class="d-flex justify-content-between flex-lg-wrap">
-                <p class="text-dark fs-5 fw-bold mb-0">${{ price }} / kg</p>
+                <p class="text-dark fs-5 fw-bold mb-0">${{ product.product_price }} / kg</p>
                 <a href="#"
                    class="btn border border-secondary rounded-pill px-3 text-primary"><i
                         class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</a>
