--- a/templates/shop/shop.html
+++ b/templates/shop/shop.html
@@ -1,41 +1,41 @@
 {% extends 'shop/base_shop.html' %}
+
 {% load static %}
 {% block shopcontent %}
-<!-- Fruits Shop Start-->
-<div class="container-fluid fruite py-5">
-    <div class="container py-5">
-        <h1 class="mb-4">Fresh fruits shop</h1>
-        <div class="row g-4">
-            <div class="col-lg-12">
-                <div class="row g-4">
-                {% include 'shop/search.html' %}
-                {% include 'shop/sorting.html' %}
-                </div>
-
-                <div class="row g-4">
-                    <div class="col-lg-3">
-                        <div class="row g-4">
-                            {% include 'shop/category.html' with categories=categories %}
-                            {% include 'shop/price_filter.html' %}
-                            {% include 'shop/filter_bools.html' %}
-                            {% include 'shop/featured_products.html' %}
-                            {% include 'shop/banner.html' %}
-                        </div>
+    {# shop start #}
+    <div class="container-fluid fruite py-5">
+        <div class="container py-5">
+            <h1 class="mb-4">Fresh fruits shop</h1>
+            <div class="row g-4">
+                <div class="col-lg-12">
+                    <div class="row g-4">
+                        {% include 'shop/search.html' %}
+                        {% include 'shop/sorting.html' %}
                     </div>
-                    <div class="col-lg-9">
-                        <div class="row g-4 justify-content-center">
-                            {% for product in products %}
-                                {% include 'shop/product.html' with name=product.product_name desc=product.product_description category=product.product_category.first.category_name price=product.product_price image=product.image_url %}
-                            {% endfor %}
+
+                    <div class="row g-4">
+                        <div class="col-lg-3">
+                            <div class="row g-4">
+                                {% include 'shop/category.html' with categories=categories %}
+                                {% include 'shop/price_filter.html' %}
+                                {% include 'shop/filter_bools.html' %}
+                                {% include 'shop/featured_products.html' %}
+                                {% include 'shop/banner.html' %}
+                            </div>
                         </div>
-                        {% include 'shop/pagination.html' %}
+                        <div class="col-lg-9">
+                            <div class="row g-4 justify-content-center">
+                                {% for product in products %}
+                                    {% include 'shop/product.html' with product=product %}
+                                {% endfor %}
+                            </div>
+                            {% include 'shop/pagination.html' %}
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<!-- Fruits Shop End-->
-
+    {# shop end #}
 
 {% endblock shopcontent %}
